# kanban_todos_textualize

./: README.md  pyproject.toml
app/: main.py
app/components/: kanban.py  popup.py  todo_widget.py
app/models/: db.py  todo.py
app/styles/: main.tcss
